--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,26 +1,30 @@
 name: build-android-libpd
 on:
   workflow_dispatch:
-  push:
-    paths: ["**/*.c", "**/*.h", "CMakeLists.txt", ".github/workflows/build-android.yml"]
 
 jobs:
   android-arm64:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout (with submodules)
         uses: actions/checkout@v4
         with:
           submodules: recursive
 
-      - name: Setup Ninja
+      - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@v4
 
-      - name: Setup NDK
+      - name: Setup Android NDK r25c
         uses: nttld/setup-ndk@v1
         with:
-          ndk-version: r25c   # safe choice with cmake toolchain
+          ndk-version: r25c
           add-to-path: true
+
+      - name: Show tool versions
+        run: |
+          cmake --version
+          ninja --version
+          echo "NDK=$ANDROID_NDK_HOME"
 
       - name: Configure (arm64-v8a)
         run: |
@@ -36,10 +40,11 @@ jobs:
       - name: Build
         run: cmake --build build-android-arm64 --config Release -j
 
-      - name: Find artifact
+      - name: Collect artifact
         id: findso
         run: |
           f="$(find build-android-arm64 -name libpd.so -print -quit)"
+          test -n "$f" || { echo "libpd.so not found"; exit 1; }
           echo "path=$f" >> $GITHUB_OUTPUT
 
       - name: Upload libpd.so
