--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -35,7 +35,8 @@ jobs:
             -DANDROID_PLATFORM=android-24 \
             -DBUILD_SHARED_LIBS=ON \
             -DCMAKE_BUILD_TYPE=Release \
-            -DHAVE_GLOB=0 -DHAVE_GLOB_H=0
+            -DCMAKE_C_FLAGS="-DHAVE_GLOB=0 -DHAVE_GLOB_H=0" \
+            -DCMAKE_C_FLAGS_RELEASE="-DHAVE_GLOB=0 -DHAVE_GLOB_H=0"
 
       - name: Build
         run: cmake --build build-android-arm64 --config Release -j
