--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -37,8 +37,8 @@ jobs:
             -DANDROID_PLATFORM=android-24 \
             -DBUILD_SHARED_LIBS=ON \
             -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_FLAGS="-DNO_GLOB" \
-            -DCMAKE_C_FLAGS_RELEASE="-DNO_GLOB"
+            -DCMAKE_C_FLAGS="-UHAVE_GLOB -UHAVE_GLOB_H" \
+            -DCMAKE_C_FLAGS_RELEASE="-UHAVE_GLOB -UHAVE_GLOB_H"
 
       - name: Build
         run: cmake --build build-android-arm64 --config Release -j
