--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,57 +1,59 @@
 name: build-android-libpd
+
 on:
   workflow_dispatch:
 
 jobs:
   android-arm64:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout (with submodules)
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+    - name: Checkout (with submodules)
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
-      - name: Install Ninja
-        uses: seanmiddleditch/gha-setup-ninja@v4
-        with:
-          version: 1.11.1
+    - name: Install Ninja
+      uses: seanmiddleditch/gha-setup-ninja@v4
+      with:
+        version: 1.11.1
 
-      - name: Setup Android NDK r25c
-        uses: nttld/setup-ndk@v1
-        with:
-          ndk-version: r25c
-          add-to-path: true
+    - name: Setup Android NDK r25c
+      uses: nttld/setup-ndk@v1
+      with:
+        ndk-version: r25c
+        add-to-path: true
 
-      - name: Show tool versions
-        run: |
-          cmake --version
-          ninja --version
-          echo "NDK=$ANDROID_NDK_HOME"
+    - name: Show tool versions
+      run: |
+        cmake --version
+        ninja --version
+        echo "NDK=$ANDROID_NDK_HOME"
 
-      - name: Configure (arm64-v8a)
-        run: |
-          cmake -S . -B build-android-arm64 \
-            -G Ninja \
-            -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake" \
-            -DANDROID_ABI=arm64-v8a \
-            -DANDROID_PLATFORM=android-24 \
-            -DBUILD_SHARED_LIBS=ON \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_C_FLAGS="-UHAVE_GLOB -UHAVE_GLOB_H" \
-            -DCMAKE_C_FLAGS_RELEASE="-UHAVE_GLOB -UHAVE_GLOB_H"
+    - name: Configure (arm64-v8a)
+      run: |
+        cmake -S . -B build-android-arm64 \
+          -G Ninja \
+          -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake" \
+          -DANDROID_ABI=arm64-v8a \
+          -DANDROID_PLATFORM=android-24 \
+          -DBUILD_SHARED_LIBS=ON \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_C_FLAGS="-UHAVE_GLOB -UHAVE_GLOB_H -DNO_GLOB" \
+          -DCMAKE_C_FLAGS_RELEASE="-UHAVE_GLOB -UHAVE_GLOB_H -DNO_GLOB"
 
-      - name: Build
-        run: cmake --build build-android-arm64 --config Release -j
+    - name: Build
+      run: cmake --build build-android-arm64 --config Release -j
 
-      - name: Collect artifact
-        id: findso
-        run: |
-          f="$(find build-android-arm64 -name libpd.so -print -quit)"
-          test -n "$f" || { echo "libpd.so not found"; exit 1; }
-          echo "path=$f" >> $GITHUB_OUTPUT
+    - name: Collect artifact
+      id: findso
+      run: |
+        f="$(find build-android-arm64 -name libpd.so -print -quit)"
+        test -n "$f" || { echo "libpd.so not found"; exit 1; }
+        echo "path=$f" >> $GITHUB_OUTPUT
 
-      - name: Upload libpd.so
-        uses: actions/upload-artifact@v4
-        with:
-          name: libpd-android-arm64
-          path: ${{ steps.findso.outputs.path }}
+    - name: Upload libpd.so
+      uses: actions/upload-artifact@v4
+      with:
+        name: libpd-android-arm64
+        path: ${{ steps.findso.outputs.path }}
